Change NBTTagNumber a bit